# CraBar

./: Cargo.toml  README.md
docs/: lightweight.md
src/: cli.rs  consts.rs  error.rs  main.rs  paint.rs  parse.rs  status.rs  test.rs  text.rs
