[package]
name = "crabar"
version = "0.1.0"
edition = "2021"

[profile.lightweight]
inherits = "release"
opt-level = "z"
strip = true
lto = true
panic = "abort"

[profile.featherweight]
inherits = "lightweight"
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["logs"]
logs = []

[dependencies]
ab_glyph = "0.2.29"
andrew = "0.3.1"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
font-kit = { version = "0.14.2", features = ["source-fontconfig"] }
log = "0.4.22"
peg = { version = "0.8.4" }
rusttype = "0.9.3"
smithay-client-toolkit = "0.19.2"
thiserror = "2.0.3"
wayland-client = "0.31.6"
